# aislop

./: Cargo.toml  README.md
.github/workflows/: aislop.yml  release.yml
patterns/: default.txt
src/: cli.rs  github.rs  llm.rs  main.rs  pattern.rs  report.rs
