[package]
name = "aislop"
version = "0.1.3"
edition = "2024"
description = "Detect AI-assisted GitHub pull requests"
license = "MIT"
repository = "https://github.com/drpaneas/aislop"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
